Major changes between version 0.98.2 and 0.98.3.
------------------------------------------------
  - Fixed the bug that prevented -daemon mode from working.
  - "diald -V", "diald -v" or "diald --version" simply prints the
    version number and exits. (I've even remembered to change the
    number in version.h finally!)
  - pppd is spawned with the nodefaultroute argument on its command
    line to avoid breakage with some systems which appear to put
    a defaultroute in pppd's global options file.
  - Added options to select either the new ethertap proxy code or
    the old slip proxy code in the Makefile. The Makefile will
    now complain if the config settings have not been set before
    compiling.
  - Added a fixwrappers script to remove bogus setenv stuff from
    the tcp_wrappers library if it exists.
  - Set the initial log level to LOG_INFO for monitors that connect
    without giving an explicit monitor setting.
  - Changes for compatibility with glibc 2.1.
  - Fixed a typo in modem.c that prevented non-/dev devices
    from working.
  - More major routing stuff. We now rely mainly on adding and
    removing addresses on interfaces. We still add the p-t-p
    routes for compatibility with 2.0 kernels (with 2.2 you
    get double routes but it isn't particularly important).
      We still add the default route if specified in the config.
    We still call the user's addroute and delroute scripts.
      The intention is to make diald work with interfaces rather
    than routes so it can run alongside a real routing daemon.
    This isn't tested :-).
      The secondary aim is to take protocol specific internals
    out of diald so that we can eventually work with IPv4, IPv6,
    IPX etc. in arbitrary combinations. This isn't done yet so
    don't get excited.
  - If we are in dynamic mode the buffered packets are sent back to
    the kernel via the proxy so that they will go back through the