@@ -1,5 +1,7 @@
 Major changes between version 0.98.2 and 0.98.3.
 ------------------------------------------------
+  - Search for ip,route,ifconfig,bootpc in /bin and /usr/bin as
+    well as /sbin and /usr/sbin.
   - Fixed the bug that prevented -daemon mode from working.
   - "diald -V", "diald -v" or "diald --version" simply prints the
     version number and exits. (I've even remembered to change the
